# rs-prom-encoding

./: Cargo.toml  LICENSE  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
benches/: encode_bench.rs
go-golden/: go.mod  go.sum  main.go
src/: bstream.rs  encoding.rs  float_histogram_chunk.rs  histogram_chunk.rs  histogram_meta.rs  histogram_types.rs  lib.rs  varbit.rs  xor.rs  xor_chunk.rs
tests/: golden_compat.rs  roundtrip.proptest-regressions  roundtrip.rs
tests/fixtures/: float_histogram_basic.json  float_histogram_stale.json  histogram_basic.json  histogram_custom_bounds.json  histogram_gauge.json  histogram_stale.json  xor_basic.json  xor_edge_cases.json  xor_many.json  xor_stale.json
